--- a/source/layouts/application.haml
+++ b/source/layouts/application.haml
@@ -4,8 +4,8 @@
     %title UICS信息通信一体化管理平台
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
     -#%link{:href => "favicon.ico", :rel => "icon", :type => "image/ico"}/
-    %link{:href => "/assets/stylesheets/stylesheets.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "./assets/plugins/font-awesome/css/font-awesome.min.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "assets/stylesheets/stylesheets.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "assets/plugins/font-awesome/css/font-awesome.min.css", :rel => "stylesheet", :type => "text/css"}/
 
     = favicon_tag 'favicon.ico'
 
@@ -26,71 +26,71 @@
     = partial 'layouts/partials/trackers'
 
 / BEGIN JQuery
-%script{:src => "/assets/plugins/jquery/jquery.min.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/jquery/jquery-ui.min.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/jquery/jquery-migrate.min.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/jquery/globalize.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery-ui.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery-migrate.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/globalize.js", :type => "text/javascript"}
 
 / BEGIN Bootstrap
-%script{:src => "/assets/plugins/bootstrap/bootstrap.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/bootstrap/bootstrap.min.js", :type => "text/javascript"}
 
 / BEGIN AngularJS
-%script{:src => "./assets/plugins/angular/angular.js", :type => "text/javascript"}
-%script{:src => "./assets/plugins/angular-route/angular-route.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/angular/angular.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/angular-route/angular-route.js", :type => "text/javascript"}
 
-%script{:src => "/assets/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/mcustomscrollbar/jquery.mCustomScrollbar.min.js", :type => "text/javascript"}
 
 / BEGIN JQuery 插件
-%script{:src => "/assets/plugins/jquery/jquery.mousewheel.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery.mousewheel.min.js", :type => "text/javascript"}
 
-%script{:src => "/assets/plugins/uniform/jquery.uniform.min.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/knob/jquery.knob.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/sparkline/jquery.sparkline.min.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/datatables/jquery.dataTables.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/uniform/jquery.uniform.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/knob/jquery.knob.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/sparkline/jquery.sparkline.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/datatables/jquery.dataTables.min.js", :type => "text/javascript"}
 
 / BEGIN Float
-%script{:src => "/assets/plugins/flot/jquery.flot.js", :type => "text/javascript"}
-%script{:src => "/assets/plugins/flot/jquery.flot.resize.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/flot/jquery.flot.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/flot/jquery.flot.resize.js", :type => "text/javascript"}
 
 / BEGIN
-%script{:src => "/assets/javascripts/plugins.js", :type => "text/javascript"}
-%script{:src => "/assets/javascripts/actions.js", :type => "text/javascript"}
-%script{:src => "/assets/javascripts/charts.js", :type => "text/javascript"}
-%script{:src => "/assets/javascripts/settings.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/plugins.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/actions.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/charts.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/settings.js", :type => "text/javascript"}
 
 / BEGIN 文件上传 PLUGINS
-%script{:src => "../assets/plugins/fancybox/source/jquery.fancybox.pack.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/fancybox/source/jquery.fancybox.pack.js", :type => "text/javascript"}
 
-%script{:src => "../assets/plugins/jquery-file-upload/js/vendor/jquery.ui.widget.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/vendor/tmpl.min.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/vendor/load-image.min.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/vendor/canvas-to-blob.min.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/blueimp-gallery/jquery.blueimp-gallery.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/vendor/jquery.ui.widget.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/vendor/tmpl.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/vendor/load-image.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/vendor/canvas-to-blob.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/blueimp-gallery/jquery.blueimp-gallery.min.js", :type => "text/javascript"}
 
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.iframe-transport.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-process.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-image.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-audio.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-video.js", :type => "text/javascript"}
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-validate.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.iframe-transport.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-process.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-image.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-audio.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-video.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-validate.js", :type => "text/javascript"}
 
-%script{:src => "../assets/plugins/jquery-file-upload/js/jquery.fileupload-angular.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery-file-upload/js/jquery.fileupload-angular.js", :type => "text/javascript"}
 
 // Fiona Core
-%script{:src => "./assets/javascripts/services.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/services.js", :type => "text/javascript"}
 
-%script{:src => "./assets/javascripts/application.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/application.js", :type => "text/javascript"}
 
-%script{:src => "./assets/javascripts/directive.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/directive.js", :type => "text/javascript"}
 
-%script{:src => "./assets/javascripts/BaseController.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/BaseController.js", :type => "text/javascript"}
 
 - data.sidebar.each do |header|
   - if (defined? header.controller) && !header.controller.nil?
-    %script{:src => "./assets/pages#{header.prefix}/#{header.controller}.js", :type => "text/javascript"}
+    %script{:src => "assets/pages#{header.prefix}/#{header.controller}.js", :type => "text/javascript"}
 
   - if (defined? header.menus) && !header.menus.nil?
     - header.menus.each do |menu|
       - if (defined? menu.controller) && !menu.controller.nil?
-        %script{:src => "./assets/pages#{header.prefix}/#{menu.controller}.js", :type => "text/javascript"}
+        %script{:src => "assets/pages#{header.prefix}/#{menu.controller}.js", :type => "text/javascript"}
