--- a/source/views/dashboard.html.haml
+++ b/source/views/dashboard.html.haml
@@ -26,7 +26,7 @@
           %span.icon-cogs>
           设置
           %i.icon-angle-right.pull-right
-        %a.list-group-item{:href => "sample_login.html"}
+        %a.list-group-item{:href => "login.html"}
           %span.icon-off>
           退出
           %i.icon-angle-right.pull-right
