--- a/source/layouts/login.haml
+++ b/source/layouts/login.haml
@@ -1,72 +1,27 @@
-!!!5
-%html{"ng-app":'fiona', lang: 'en'}
+!!!
+%html{:lang => "en"}
   %head
-    %meta{charset: 'utf-8'}/
-    %meta{content: 'IE=edge,chrome=1', 'http-equiv' => 'X-UA-Compatible'}/
-    %meta{content: 'width=device-width, initial-scale=1', name:'viewport' }/
-    %meta{content: '', name: 'description'}/
-    %meta{content: '', name: 'keywords'}/
-
-    %title Login
-
-    / = stylesheet_link_tag 'site'
-
-    / 使用的Google字体
-    -#%link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all", :rel => "stylesheet", :type => "text/css"}/
-
+    %title FIELD运行健康管理中心 - 登录系统
+    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
+    %link{:href => "favicon.ico", :rel => "icon", :type => "image/ico"}/
+    %link{:href => "assets/stylesheets/stylesheets.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "assets/plugins/font-awesome/css/font-awesome.min.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "assets/plugins/simple-line-icons/simple-line-icons.min.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "assets/plugins/bootstrap/css/bootstrap.min.css", :rel => "stylesheet", :type => "text/css"}/
-    / END GLOBAL MANDATORY STYLES
+  %body.bg-img-num18{"data-settings" => "open"}
+    .container
+      = yield
 
-    / BEGIN THEME GLOBAL STYLES
-    %link{:href => "./assets/stylesheets/components.min.css", :rel => "stylesheet", :type => "text/css"}/
-    %link{:href => "./assets/stylesheets/plugins.min.css", :rel => "stylesheet", :type => "text/css"}/
-    / END THEME GLOBAL STYLES
-
-    / BEGIN PAGE LEVEL STYLES
-    %link{:href => "assets/pages/login/login.min.css", :rel => "stylesheet", :type => "text/css"}/
-    / END PAGE LEVEL STYLES
-
-    / ICON
-    %link{:href => "favicon.ico", :rel => "shortcut icon"}/
-
-    = yield_content :head
-
-  %body.login
-
-    = yield
-
-    / Footer
-    = partial 'layouts/partials/footer'
-
-    / Google Analytics
-    = partial 'layouts/partials/trackers'
-
-/ BEGIN CORE PLUGINS
+/ BEGIN JQuery
 %script{:src => "assets/plugins/jquery/jquery.min.js", :type => "text/javascript"}
-%script{:src => "assets/plugins/bootstrap/js/bootstrap.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery-ui.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/jquery-migrate.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/jquery/globalize.js", :type => "text/javascript"}
 
-/ jquery.cookie.js 提供了jquery中非常简单的操作cookie的方法。
-%script{:src => "assets/plugins/js.cookie.min.js", :type => "text/javascript"}
+/ BEGIN Bootstrap
+%script{:src => "assets/plugins/bootstrap/bootstrap.min.js", :type => "text/javascript"}
 
-/ bootstrap的下拉组件，需要点击click时，方可展示下拉列表。因此对于喜欢简单少操作的大家来说，
-/ 点击一下多少带来不便，因此，引入hover监听，鼠标经过自动展示下拉框。
-%script{:src => "assets/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js", :type => "text/javascript"}
+%script{:src => "assets/plugins/uniform/jquery.uniform.min.js", :type => "text/javascript"}
 
-/ jQuery BlockUI插件可以在不锁定浏览器的同时，模拟同步模式下发起Ajax请求的行为。
-/ 该插件激活时，会阻止用户在页面进行的操作，直到插件被关闭。BlockUI通过向DOM中添加元素实现其外观和组织用户交互的行为。
-%script{:src => "assets/plugins/jquery.blockui.min.js", :type => "text/javascript"}
-
-%script{:src => "assets/plugins/angular/angular.js", :type => "text/javascript"}
-
-%script{:src => "assets/plugins/angular-route/angular-route.js", :type => "text/javascript"}
-
-%script{:src => "./assets/javascripts/services.js", :type => "text/javascript"}
-
-// Fiona Core
-%script{:src => "./assets/javascripts/services.js", :type => "text/javascript"}
-
-%script{:src => "assets/pages/login/login.min.js", :type => "text/javascript"}
-
-
+/ BEGIN
+%script{:src => "assets/javascripts/plugins.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/actions.js", :type => "text/javascript"}
+%script{:src => "assets/javascripts/settings.js", :type => "text/javascript"}
