--- a/source/login.html.haml
+++ b/source/login.html.haml
@@ -1,43 +1,33 @@
-/ BEGIN LOGO
-.logo
-  %a{:href => "#none"}
-    %img{:alt => "", :src => "assets/images/logo-big.png"}/
 
-/ BEGIN LOGIN
-.content
-  / BEGIN LOGIN FORM
-  %form.login-form{:name => "signup_form", :novalidate => "", "ng-submit" => "signupForm()", "ng-controller" => "SignupController"}
+.login-block
+  .block.block-transparent
+    .row
+      .col-md-12
 
-    %h3.form-title.font-green 登录
-    .alert.alert-danger{"ng-show" => "signup_form.submitted && error"}
-      %button.close{"data-close" => "alert"}
-      %span{"ng-bind": "message"}
+    .content.controls.npt
+      .form-row
+        .col-md-12.text-center
+          %img{:src => "assets/images/login_logo.png", :width => '200px'}/
 
-    .form-group
-      / ie8, ie9 does not support html5 placeholder, so we just show field title for that
-      %label.control-label.visible-ie8.visible-ie9 用户名
-      %input.form-control.form-control-solid.placeholder-no-fix{:autocomplete => "off", :name => "name", :placeholder => "输入用户名", :type => "text", :required => "required", "ng-model" => "signup.name"}/
+      .form-row
+        .col-md-12
+          .input-group
+            .input-group-addon
+              %span.icon-user
+            %input.form-control{:placeholder => "帐号", :type => "text"}/
+      .form-row
+        .col-md-12
+          .input-group
+            .input-group-addon
+              %span.icon-key
+            %input.form-control{:placeholder => "密码", :type => "password"}/
+      .form-row
+        .col-md-6
+          %a.btn.btn-default.btn-block.btn-clean{:href => "#"} 登录
 
-    .form-group
-      %label.control-label.visible-ie8.visible-ie9 密码
-      %input.form-control.form-control-solid.placeholder-no-fix{:autocomplete => "off", :name => "password", :placeholder => "输入密码", :type => "password", :required => "required", "ng-model" => "signup.password"}/
+        .col-md-6
+          %a.btn.btn-default.btn-block.btn-clean{:href => "#"} 关闭
 
-    .form-actions
-      %button.btn.green.uppercase{:type => "submit"} 登录
-      %a#forget-password.forget-password{:href => "javascript:;"} 忘记密码?
-
-    .create-account
-      %p
-
-  / BEGIN FORGOT PASSWORD FORM
-  %form.forget-form{:action => "index.html", :method => "post"}
-    %h3.font-green 忘记密码 ?
-    %p 输入您的 e-mail 地址用于重置登录密码.
-    .form-group
-      %input.form-control.placeholder-no-fix{:autocomplete => "off", :name => "email", :placeholder => "Email", :type => "text"}/
-    .form-actions
-      %button#back-btn.btn.green.btn-outline{:type => "button"} 返回
-      %button.btn.btn-success.uppercase.pull-right{:type => "submit"} 提交
-
-.copyright 2014 © Metronic. Admin Dashboard Template.
-
+      .form-row
+        .col-md-12
+          %a.btn.btn-link.btn-block{:href => "#"} 忘记密码?
