--- a/source/layouts/partials/_navbar.haml
+++ b/source/layouts/partials/_navbar.haml
@@ -25,7 +25,7 @@
               - header.menus.each do |menu|
                 %li
                   -#%a{:href => "#{menu.uri}"} #{menu.name}
-                  %a{:href => "/views/index.html", :target=>"_blank"} #{menu.name}
+                  %a{:href => "/bmc.jsp", :target=>"_blank"} #{menu.name}
 
     %form.navbar-form.navbar-right{:role => "search"}
       .form-group
