--- a/source/assets/pages/api/CasesController.js.erb
+++ b/source/assets/pages/api/CasesController.js.erb
@@ -1,6 +1,6 @@
 var url = 'server/php/';
 // 宠物管理
-angular.module('fiona')
+angular.module('network')
 
 .controller('CasesController', ['$scope', '$http', '$filter', '$window', function($scope, $http) {
     $scope.options = {
