--- a/source/layouts/application.haml
+++ b/source/layouts/application.haml
@@ -1,5 +1,5 @@
 !!!
-%html{"ng-app" => "fiona", lang: 'en'}
+%html{"ng-app" => "network", lang: 'en'}
   %head
     %title UICS信息通信一体化管理平台
     %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
