--- a/source/layouts/inputs/_double.haml
+++ b/source/layouts/inputs/_double.haml
@@ -1,6 +1,6 @@
 - $keyword = ((defined? keyword) ? keyword : @page_id)
 
-- fields = data["" << @module[$keyword] << "-" << $keyword].fields
+- fields = data["" << @module[$keyword].bundle]["" << $keyword].fields
 
 - $required = ((defined? required) ? required : 'false')
 
