--- a/source/layouts/portal/_sideportal.haml
+++ b/source/layouts/portal/_sideportal.haml
@@ -1,5 +1,5 @@
 -# portal_name, portal_id
-- @portal = data["" << @module[@portal_id] << "-" << @portal_id]
+- @portal = data["" << @module[@portal_id].bundle] ["" << @portal_id]
 
 #operate_msg_box
 .row
