--- a/source/layouts/widget/_filter.haml
+++ b/source/layouts/widget/_filter.haml
@@ -6,7 +6,7 @@
 
 - @portal_prefix = @module[@portal_id]
 
-- @portal = data["" << @module[@portal_id] << "-" << @portal_id]
+- @portal = data["" << @module[@portal_id].bundle] ["" << @portal_id]
 
 %div
   .input-group
