--- a/source/layouts/widget/_portal_view.haml
+++ b/source/layouts/widget/_portal_view.haml
@@ -8,7 +8,7 @@
 
 - @portal_prefix = @module[@portal_id]
 
-- @portal = data["" << @module[@portal_id] << "-" << @portal_id]
+- @portal = data["" << @module[@portal_id].bundle] ["" << @portal_id]
 
 -#- puts $pagefilter
 
