--- a/source/layouts/partials/_navbar.haml
+++ b/source/layouts/partials/_navbar.haml
@@ -16,9 +16,15 @@
               #{header.name}
 
           - else
-            %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "##{header.uri}"}
-              %span{:class => "#{header.icon || 'icon-bar-chart'}" }
-              #{header.name}
+            - if !header.url.nil?
+              %a.dropdown-toggle{:href => "#{header.url}"}
+                %span{:class => "#{header.icon || 'icon-bar-chart'}" }
+                #{header.name}
+
+            - else
+              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "##{header.uri}"}
+                %span{:class => "#{header.icon || 'icon-bar-chart'}" }
+                #{header.name}
 
           - if (defined? header.menus) && !header.menus.nil?
             %ul.dropdown-menu
