--- a/source/views/flash/nestingflash.html
+++ b/source/views/flash/nestingflash.html
@@ -1,6 +1,5 @@
 
-<!--<iframe id="nestingflash" name="nestingflash"  frameborder ='0' style = "width:100%;height:800px;" src = "https://192.168.0.111:8443/" ></iframe>-->
-
+<iframe id="nestingflashlocal" name="nestingflashlocal"  frameborder ='0' style = "width:100%;height:800px;" src = "https://192.168.0.111:8443/" ></iframe>
 
 <script language="JavaScript" type="text/javascript">
   <!--
