--- a/source/layouts/application.haml
+++ b/source/layouts/application.haml
@@ -95,6 +95,8 @@
 
 %script{:src => "assets/javascripts/controllers/SidebarController.js", :type => "text/javascript"}
 
+%script{:src => "assets/javascripts/controllers/DashboardController.js", :type => "text/javascript"}
+
 %script{:src => "assets/javascripts/controllers/NestingflashController.js", :type => "text/javascript"}
 
 - data.sidebar.each do |header|
